--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,9 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation "androidx.navigation:navigation-compose:$compose_nav_version"
     implementation 'androidx.compose.material:material:1.3.1'
+    implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
     implementation "com.google.dagger:hilt-android:2.44.2"
+    implementation 'androidx.core:core-ktx:1.9.0'
     kapt "com.google.dagger:hilt-compiler:2.44.2"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
