--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         compose_ui_version = '1.3.3'
         compose_nav_version = '2.5.3'
+        accompanist_version = '0.28.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
