--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         compose_ui_version = '1.3.3'
         compose_nav_version = '2.5.3'
         accompanist_version = '0.28.0'
+        room_version = "2.5.0"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
