--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,14 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                    "room.schemaLocation":"$projectDir/schemas".toString(),
+                    "room.incremental":"true"]
+            }
+        }
     }
 
     buildTypes {
@@ -57,6 +65,7 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     //implementation "androidx.room:room-paging:$room_version"
 
     implementation "androidx.compose.ui:ui:$compose_ui_version"
