--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,6 +36,7 @@ junitExt = { group = "androidx.test.ext", name="junit", version.ref= "junitExt"}
 espressoCore = { group = "androidx.test.espresso", name="espresso-core", version.ref = "espresso" }
 junitUi = { group = "androidx.compose.ui", name= "ui-test-junit4", version.ref = "composeUiVersion" }
 debugComposeUiTooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "composeUiVersion" }
+debugComposeUiTestManifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version.ref = "composeUiVersion" }
 
 [plugins]
 android-application = {id = "com.android.application", version.ref="gradle"}
